After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 646241 - Repeat speed pref not remembered in GUI
Repeat speed pref not remembered in GUI
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Keyboard
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
: 643069 646243 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2011-03-30 15:37 UTC by Gabriel Burt
Modified: 2011-03-31 11:22 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
keyboard: Clarify actual units used for repeat rate (6.43 KB, patch)
2011-03-30 17:06 UTC, Bastien Nocera
committed Details | Review
keyboard: Set repeat-interval correctly (2.20 KB, patch)
2011-03-30 17:21 UTC, Bastien Nocera
committed Details | Review

Description Gabriel Burt 2011-03-30 15:37:51 UTC
1) Open gnome-control-center
2) Click on 'Keyboard'
3) Change the value of the repeat speed slider
4) Click 'All Settings', then back to 'Keyboard', notice the value isn't remembered
Comment 1 Bastien Nocera 2011-03-30 16:19:55 UTC
It is remembered. But the math is wrong in there (above and beyond the clipping due to some uncast ints).
Comment 2 Bastien Nocera 2011-03-30 16:32:06 UTC
*** Bug 646243 has been marked as a duplicate of this bug. ***
Comment 3 Bastien Nocera 2011-03-30 17:06:02 UTC
Created attachment 184718 [details] [review]
keyboard: Clarify actual units used for repeat rate

We designed for the repeat rate being a delay between repeated keys,
in milliseconds, so we could have 0.5 characters per second (a character
every 2 seconds) for a11y purposes.

Except that:
 * the schema kind of mentioned it, but it wasn't clear
 * XF86Misc doesn't support less than one character per second
 * Parts of the API seemed to expect the rate being in number of chars
   per second.
Comment 4 Bastien Nocera 2011-03-30 17:21:01 UTC
Created attachment 184719 [details] [review]
keyboard: Set repeat-interval correctly

This sets the repeat-interval key in milliseconds. From a minimum of
one char per 2 seconds up to 50 characters per second (as per
requirements listed in 84eed6b0cf9f0b44db5a030018bfca17dae18fd5).
Comment 5 Cosimo Cecchi 2011-03-30 19:50:11 UTC
*** Bug 643069 has been marked as a duplicate of this bug. ***
Comment 6 Matthias Clasen 2011-03-30 22:42:20 UTC
Review of attachment 184718 [details] [review]:

::: data/org.gnome.settings-daemon.peripherals.gschema.xml.in.in
@@ +66,2 @@
       <default>30</default>
+      <summary>Repeat Interval</summary>

Might be slightly nicer to say 'Key Repeat Interval' here.
Comment 7 Bastien Nocera 2011-03-31 11:19:01 UTC
Comment on attachment 184718 [details] [review]
keyboard: Clarify actual units used for repeat rate

With a small change to the repeat-interval description

Attachment 184718 [details] pushed as 44bdb6a - keyboard: Clarify actual units used for repeat rate
Comment 8 Bastien Nocera 2011-03-31 11:22:02 UTC
And bumped gnome-settings-daemon requirements to make sure the new schema is present

Attachment 184719 [details] pushed as 6dd3318 - keyboard: Set repeat-interval correctly