keyboard: Clarify actual units used for repeat rate

We designed for the repeat rate being a delay between repeated keys,
in milliseconds, so we could have 0.5 characters per second (a character
every 2 seconds) for a11y purposes.

Except that:
 * the schema kind of mentioned it, but it wasn't clear
 * XF86Misc doesn't support less than one character per second
 * Parts of the API seemed to expect the rate being in number of chars
   per second.

https://bugzilla.gnome.org/show_bug.cgi?id=646241